--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -79,8 +79,8 @@
         <table>
             <tr class="header-row">
                 <td><b>Date</b></td>
-                <td><b>Master Mason Cost</b></td>
-                <td><b>Labour Cost</b></td>
+                <td><b>Name</b></td>
+                <td><b>Cost</b></td>
                 <td><b>Is Active</b></td>
             </tr>
 
@@ -88,8 +88,8 @@
             {
                 <tr class="table1">
                     <td>@costMasterVm.Date.ToString("dd-MMMM-yyyy")</td>
-                    <td>@costMasterVm.MasterMasonCost</td>
-                    <td>@costMasterVm.LabourCost</td>
+                    <td>@costMasterVm.Name</td>
+                    <td>@costMasterVm.Cost</td>
                     <td>@costMasterVm.IsActive</td>
                 </tr>
             }
