--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -93,7 +93,8 @@
             <table>
                 <tr class="header-row">
                     <td><b>Date</b></td>
-                    <td><b>Job Category Name</b></td>
+                    <td><b>Job Type</b></td>
+                    <td><b>Contractors</b></td>
                     <td><b>Total Worker</b></td>
                     <td><b>Amount Per Worker</b></td>
                     <td><b>Total Amount</b></td>
@@ -104,6 +105,7 @@
                     <tr class="table1">
                         <td>@dailyAttendanceVm.Date.ToString("dd-MMMM-yyyy")</td>
                         <td>@dailyAttendanceVm.Name</td>
+                        <td>@dailyAttendanceVm.ContractorName</td>
                         <td>@dailyAttendanceVm.TotalWorker</td>
                         <td>@dailyAttendanceVm.AmountPerWorker</td>
                         <td>@dailyAttendanceVm.TotalAmount</td>
