--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionApplication.ViewModels.CostMasterVm.CostMasterVm
+﻿@model ConstructionApplication.ViewModels.CostMasterVm.AddNewCostMasterVm
 
 <h4>Add Cost</h4>
 <br />
@@ -7,6 +7,7 @@
         <form asp-action="Add">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <span class="text-success"> <b> @ViewBag.successMessage </b> </span>
+            <span class="text-danger"> <b> @ViewBag.ErrorMessage </b> </span>
 
             <div class="form-group" style="width: 200px;">
                 <label asp-for="Date" class="control-label"><b>Date</b></label>
@@ -15,8 +16,8 @@
             </div>
             <br />
             <div class="form-group" style="width: 200px;">
-                <label asp-for="JobCategoryId" class="control-label"><b>Job Categories</b></label>
-                @Html.DropDownListFor(model => model.JobCategoryId, (SelectList)ViewBag.JobCategory, "-- Select Job Categories--", new { @class = "form-control", id = "jobCategorySelect", onchange = "updateCost()" })
+                <label asp-for="JobCategoryId" class="control-label"><b>Job Category</b></label>
+                @Html.DropDownListFor(model => model.JobCategoryId, (SelectList)ViewBag.JobCategory, "-- Select --", new { @class = "form-control", id = "jobCategorySelect", onchange = "updateCost()" })
                 <span asp-validation-for="JobCategoryId" class="text-danger"></span>
             </div>
             <br />
