--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
@@ -14,10 +14,16 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <br/>
-            <div class="form-group" style="width: 60%;">
-                <label asp-for="JobCategoryId" class="control-label"><b>Job Categories</b></label>
-                @Html.DropDownListFor(model => model.JobCategoryId, (SelectList)ViewBag.JobCategory, "-- Select Job Category --", new { @class = "form-control", @id = "JobCategoryId" })
+            <div class="form-group" style="width: 40%;">
+                <label asp-for="JobCategoryId" class="control-label"><b>Job Category</b></label>
+                @Html.DropDownListFor(model => model.JobCategoryId, (SelectList)ViewBag.JobCategory, "-- SELECT --", new { @class = "form-control", @id = "JobCategoryId" })
                 <span asp-validation-for="JobCategoryId" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group" style="width: 40%;">
+                <label asp-for="ContractorId" class="control-label"><b>Contractor Name</b></label><br />
+                <select id="contractorId" name="contractorId"></select>
+                <span class="text-danger"></span>
             </div>
             <br />
             <div class="form-group row" style="width: 95%;">
@@ -26,17 +32,14 @@
                     <input asp-for="TotalWorker" id="totalWorker" class="form-control" />
                     <span asp-validation-for="TotalWorker" class="text-danger"></span>
                 </div>
-                @* <div class="col-md-4 d-flex align-items-center" style="margin-left: 10px;">
-                    <a href="#" id="calculateCost"><b>Calculate Cost</b></a>
-                </div> *@
             </div>
             <br />
-            <div class="form-group" style="width: 60%;">
+            <div class="form-group" style="width: 40%;">
                 <label asp-for="AmountPerWorker"><b>Amount Per Worker</b></label>
                 <input asp-for="AmountPerWorker" id="amountPerWorker" class="form-control" readonly />
             </div>
             <br />
-            <div class="form-group" style="width: 60%;">
+            <div class="form-group" style="width: 40%;">
                 <label><b>Total Amount</b></label>
                 <input asp-for="TotalAmount" id="totalAmount" class="form-control" readonly />
             </div>
@@ -52,17 +55,26 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
+        // When the dropdown value changes, make an AJAX call to fetch the cost.
         $('#JobCategoryId').change(function () {
-            console.log('Dropdown value changed');
             var jobCategoryId = $(this).val();
-
             if (jobCategoryId > 0) {
                 $.ajax({
-                    url: '@Url.Action("AddUsingAjax", "DailyAttendance")',
+                    url: '@Url.Action("GetDataByJobCategoryId", "DailyAttendance")',
                     type: 'GET',
                     data: { jobCategoryId: jobCategoryId },
                     success: function (response) {
                         $('#amountPerWorker').val(response.cost);
+                        debugger;
+                        //$('#ContractorName').val(response.contractors);
+
+                        var s = '<option value="-1">SELECT</option>';
+                        
+                        for (var i = 0; i < response.contractors.length; i++) {
+                            s += '<option value="' + response.contractors[i].contractorId + '">' + response.contractors[i].name + '</option>';
+                        }
+                        $("#contractorId").html(s);
+
                         updateTotalAmount();
                     },
                     error: function () {
@@ -70,11 +82,13 @@
                     }
                 });
             } else {
-                alert("Please select a Job Category.");
+                // Clear amount and total amount fields if no valid category is selected.
+                $('#amountPerWorker').val('');
+                $('#totalAmount').val('');
             }
         });
 
-        // Function to update total amount when TotalWorker changes
+        // Function to update total amount based on amountPerWorker and totalWorker
         function updateTotalAmount() {
             var amountPerWorker = parseFloat($('#amountPerWorker').val()) || 0;
             var totalWorker = parseFloat($('#totalWorker').val()) || 0;
@@ -82,46 +96,9 @@
             $('#totalAmount').val(totalAmount.toFixed(2));
         }
 
-        // Trigger update when TotalWorker input changes
+        // Trigger total amount update when TotalWorker input changes
         $('#totalWorker').on('input', function () {
             updateTotalAmount();
         });
     });
 </script>
-
-
-
-@* <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
-
-        function calculateTotalCount() {
-            var totalMasterMason = parseInt($("#TotalMasterMason").val()) || 0;
-            var totalLabour = parseInt($("#TotalLabour").val()) || 0;
-            var totalCount = totalMasterMason + totalLabour;
-            $("#TotalCount").val(totalCount);
-        }
-
-        $("#TotalMasterMason, #TotalLabour").on('input', function () {
-            calculateTotalCount();
-        });
-
-        $("#calculateCost").click(function (event) {
-            event.preventDefault();
-
-            $.ajax({
-                url: '@Url.Action("GetActiveCost", "CostMaster")',
-                type: 'GET',
-                success: function(response) {
-                    
-                    $("#MasterMasonAmount").val(response.masterMasonCost * $("#TotalMasterMason").val());
-                    $("#LabourAmount").val(response.labourCost * $("#TotalLabour").val());
-                    $("#TotalAmount").val(parseInt($("#MasterMasonAmount").val()) + parseInt($("#LabourAmount").val()));
-                },
-                error: function(xhr, status, error) {
-                    console.error("Error occurred while fetching costs: " + error);
-                }
-            });
-        });
-    });
-</script> *@
