--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractor List</b></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractor</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="javascript:void(0);" onclick="toggleAboutUs()"><b>About Us</b></a>
