--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -59,7 +59,8 @@
             font-size: 18px;
             border-radius: 10px;
             margin: 20px auto;
-            width: 50%;
+            width: 60%;
+            font-weight: bold;
         }
 
         .btn-primary {
@@ -107,16 +108,16 @@
         </div>
     </div>
 
-    <table>
-        <tr class="header-row">
-            <td><b>Date</b></td>
-            <td><b>Job Type</b></td>
-            <td><b>Cost</b></td>
-            <td><b>Is Active</b></td>
-        </tr>
+    @if (Model != null && Model.Count > 0)
+    {
+        <table>
+            <tr class="header-row">
+                <td><b>Date</b></td>
+                <td><b>Job Type</b></td>
+                <td><b>Cost</b></td>
+                <td><b>Is Active</b></td>
+            </tr>
 
-        @if (Model != null && Model.Count > 0)
-        {
             @foreach (var costMasterVm in Model)
             {
                 <tr class="table1">
@@ -135,13 +136,11 @@
                     </td>
                 </tr>
             }
-        }
-        else
-        {
-            <tr>
-                <td colspan="4" class="no-record">No records found for the selected Job Category.</td>
-            </tr>
-        }
-    </table>
+        </table>
+    }
+    else
+    {
+        <div class="no-record">No records found for the selected Job Category.</div>
+    }
 </body>
 </html>
