--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Add.cshtml
@@ -16,13 +16,13 @@
             <br />
             <div class="form-group" style="width: 60%;">
                 <label asp-for="SupplierId" class="control-label"><b>Supplier/Vendor</b></label>
-                @Html.DropDownListFor(model => model.SupplierId, (SelectList)ViewBag.Supplier, "-- Select Material --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.SupplierId, (SelectList)ViewBag.Supplier, "-- Select Supplier --", new { @class = "form-control" })
                 <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
                 <label asp-for="BrandId" class="control-label"><b>Brands</b></label>
-                @Html.DropDownListFor(model => model.BrandId, (SelectList)ViewBag.Brands, "-- Select Material --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.BrandId, (SelectList)ViewBag.Brands, "-- Select Brand --", new { @class = "form-control" })
                 <span asp-validation-for="BrandId" class="text-danger"></span>
             </div>
             <br />
