Change Connection string and few change in Add.cshtml for Home Controller which is Home page of my Application

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Add.cshtml
@@ -79,7 +79,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 &nbsp;&nbsp;&nbsp;
-                <a href="https://localhost:7212/Contractor/Index"><b>Back To Contractor List</b></a>
+                <a asp-controller ="Contractor" asp-action="Index"><b>Back To Contractor List</b></a>
             </div>
         </form>
     </div>
