--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -12,9 +12,12 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://localhost:7212/">
+
+                @* <a class="navbar-brand" href="https://localhost:7212/"> *@
+                <a class="navbar-brand" asp-area="" asp-controller="Home">
                     <img src="~/UploadedImage/NavbarLogo.jpg" alt="ConstructionApplication Logo" style="width: 100px; height: 60px;" />
                 </a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractor</b></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contractor" asp-action="Index"><b>Contractors</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="javascript:void(0);" onclick="toggleAboutUs()"><b>About Us</b></a>
