--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/_ViewImports.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ConstructionApplication
-@using ConstructionApplication.Models
+@using ConstructionApplication.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
