--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="bottom-section">
-        <a href="https://localhost:7212/MaterialPurchase/Add">Add New Material Purchase</a>
+        <a asp-controller="MaterialPurchase" asp-action="Add">Add New Material Purchase</a>
     </div>
 
     <b style="text-align: left; margin: 20px 0;">Total Purchase: @ViewBag.materialPurchaseCount</b>
