--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h3 style="text-align: center;">Cost Master Report</h3>
 <div class="bottom-section">
-    <a href="https://localhost:7212/Costmaster/Add">Add New Cost</a>
+    <a asp-controller="Costmaster" asp-action="Add">Add New Cost</a>
 </div>
 <html>
 <head>
