--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
@@ -84,6 +84,7 @@
                 // Clear amount and total amount fields if no valid category is selected.
                 $('#amountPerWorker').val('');
                 $('#totalAmount').val('');
+                //tesing code here
             }
         });
 
