--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -146,6 +146,7 @@
             <tr class="header-row">
                 <td><b>Date</b></td>
                 <td><b>Supplier</b></td>
+                <td><b>Supplier Contact</b></td>
                 <td><b>Brand</b></td>
                 <td><b>Material</b></td>
                 <td><b>Unit Price</b></td>
@@ -160,6 +161,7 @@
                 <tr>
                     <td>@materialPurchaseVm.Date.ToString("dd-MMMM-yyyy")</td>
                     <td>@materialPurchaseVm.SupplierName</td>
+                    <td>@materialPurchaseVm.PhoneNumber</td>
                     <td>@materialPurchaseVm.BrandName</td>
                     <td>@materialPurchaseVm.MaterialName</td>
                     <td>@materialPurchaseVm.UnitPrice.ToString("0.00") / <i>@materialPurchaseVm.UnitOfMeasure</i></td>
