Fixed validation in Construction Application in all post add action

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Contractor/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h3 style="text-align: center;">Contractor List</h3>
 <div class="bottom-section">
-    <a asp-controller="Contractor" asp-action="Add">Add New Contractor</a>
+    <a asp-controller="Contractor" asp-action="Add">Add New</a>
 </div>
 <head>
     <style>
