--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -2,9 +2,9 @@
 
 <h3 style="text-align: center;">Attendance Report</h3>
 <div class="bottom-section">
-    <a asp-controller="DailyAttendance" asp-action="Add">Add New Daily Attendance</a>
+    <a asp-controller="DailyAttendance" asp-action="Add">Add New</a>
     &nbsp;&nbsp;&nbsp;
-    <a asp-controller="DailyAttendance" asp-action="AddUsingAjax">Add New Daily (Attendance Using AJAX)</a>
+    <a asp-controller="DailyAttendance" asp-action="AddUsingAjax">Add New (Using AJAX)</a>
 </div>
 <html>
 <head>
